# AiAgentsModel-

./: README.md
verifiable-ai/: .env  Cargo.toml  build_err.txt  build_error.txt  build_log.txt  check.json  check_log.txt  docker-compose.yml  err_final.txt  err_jobs.txt  err_utf8.txt  find_refs.txt  invalid.json  last_job_id.txt  logs.original.txt  orchestrator_vdb.json  out.txt  short_err_7.txt  start_llm_basic.ps1  start_llm_devops.ps1  test.jsonl  test_output.txt  valid.json  vdb_err.txt  vdb_err_3.txt  vdb_err_short.txt  vdb_regr.txt  verbose_build.txt  verify_ph10_lifecycle.py  verify_ph11_webhooks.py
verifiable-ai/.cargo-target/: .rustc_info.json
verifiable-ai/.cargo-target/debug/.fingerprint/allocator-api2-37e1e50f8d163b56/: lib-allocator_api2  lib-allocator_api2.json
verifiable-ai/.cargo-target/debug/.fingerprint/allocator-api2-5245693bc8f800bd/: lib-allocator_api2  lib-allocator_api2.json
verifiable-ai/.cargo-target/debug/.fingerprint/anyhow-9c94c82d72289e1d/: lib-anyhow  lib-anyhow.json
verifiable-ai/.cargo-target/debug/.fingerprint/anyhow-9fefd285d2df6dae/: run-build-script-build-script-build  run-build-script-build-script-build.json
verifiable-ai/.cargo-target/debug/.fingerprint/anyhow-c5eaa71e7df1b08e/: lib-anyhow
verifiable-ai/.cargo-target/debug/.fingerprint/arrayref-35de2a5fea0a537c/: lib-arrayref
verifiable-ai/.cargo-target/debug/.fingerprint/arrayref-70f4ba0ada92dbd2/: lib-arrayref  lib-arrayref.json
verifiable-ai/.cargo-target/debug/.fingerprint/arrayvec-a8d3fa5878effa80/: lib-arrayvec  lib-arrayvec.json
verifiable-ai/.cargo-target/debug/.fingerprint/async-trait-c44c6ab1f87e31bc/: lib-async_trait.json
verifiable-ai/.cargo-target/debug/.fingerprint/atoi-6901fb47a9dee99c/: lib-atoi  lib-atoi.json
verifiable-ai/.cargo-target/debug/.fingerprint/atoi-fef54d993b2acc0c/: lib-atoi  lib-atoi.json
verifiable-ai/.cargo-target/debug/.fingerprint/atomic-waker-ff3e5c8ca0a5bd5b/: lib-atomic_waker  lib-atomic_waker.json
verifiable-ai/crates/claims/: Cargo.toml
verifiable-ai/crates/claims/src/: index.rs  lib.rs  schema.rs  store.rs
verifiable-ai/crates/modelops/: Cargo.toml
verifiable-ai/crates/modelops/src/: active.rs  inventory.rs  lib.rs  manifest.rs  schema.rs  store.rs
verifiable-ai/crates/vdb/: Cargo.toml
verifiable-ai/crates/vdb/src/: crypto.rs  events.rs  history.rs  lib.rs  nodestore.rs  smt.rs  storage.rs  types.rs
verifiable-ai/crates/vdb/tests/: integration.rs
verifiable-ai/data/datasets/: tmp_7e5e9d4a-c110-4a39-908a-2357a6f6d0eb.jsonl
verifiable-ai/data/logs/: 743fd779-8658-445d-88c6-6d04cf9e9422.ndjson  fc70989e-2c70-4c87-a309-01656347cd6e.ndjson
verifiable-ai/examples/claim-demo/: Cargo.toml
verifiable-ai/examples/claim-demo/src/: main.rs
verifiable-ai/examples/mvp-demo/: Cargo.toml
verifiable-ai/examples/mvp-demo/src/: main.rs
verifiable-ai/scripts/: verify_jobs.ps1  verify_recovery.ps1
verifiable-ai/services/orchestrator/: .env  Cargo.toml  Dockerfile
verifiable-ai/services/orchestrator/defaults/: system_manual.txt
verifiable-ai/services/orchestrator/migrations/: 20241222000000_init_jobs.sql  20241222000001_add_leases.sql  20241222000002_concurrency.sql  20241222000003_priority.sql  20241222000004_queues.sql  20241222000005_workers.sql  20241222000006_job_lifecycle.sql  20241222000007_webhook_outbox.sql  20241222000008_knowledge_vectors.sql
verifiable-ai/services/orchestrator/src/: config.rs  dataset_validator.rs  events.rs  main.rs  orchestrator_job.rs  provider.rs  provider_lmstudio.rs  routes_chat.rs  routes_jobs.rs  routes_models.rs  routes_runtime.rs  routes_training.rs  runtime.rs  runtime_reload.rs  state.rs  training_store.rs  types.rs  types_jobs.rs  types_training.rs  vdb_exec.rs  webhooks.rs  worker.rs  worker_loop.rs
verifiable-ai/services/orchestrator/workers/: hf_downloader.py  kb_worker.py  lora_trainer.py  pack_build.py  text_generator.py
verifiable-ai/services/packsmith/: Dockerfile  requirements.txt
verifiable-ai/services/packsmith/src/: main.py  models.py
verifiable-ai/services/ui/: Dockerfile  package-lock.json
verifiable-ai/services/ui/src/: App.jsx  api.js  hooks.js  styles.css
verifiable-ai/workers/: hf_downloader.py  lora_trainer.py
(+980 files in other folders)
