[workspace]
members = [
    "crates/vdb",
    "examples/mvp-demo",
]
resolver = "2"

[workspace.dependencies]
# Crypto
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Utilities
hex = "0.4"
thiserror = "1.0"
