[workspace]
members = [
  "crates/vdb",
  "crates/claims",
  "crates/modelops",
  "services/orchestrator",
  "examples/mvp-demo",
  "examples/claim-demo",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
thiserror = { version = "1.0" }
hex = "0.4"
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors"] }
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"
rand_core = "0.6"
