[package]
name = "vdb"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
