[package]
name = "vdb"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6", features = ["std"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
