[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

vdb = { path = "../../crates/vdb" }
modelops = { path = "../../crates/modelops" }
