[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
uuid = { workspace = true, features = ["v4", "serde"] }
hex = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
bytes = "1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

vdb = { path = "../../crates/vdb" }
modelops = { path = "../../crates/modelops" }
